--- a/index.html
+++ b/index.html
@@ -22,8 +22,23 @@ body{margin:0;background:linear-gradient(180deg,var(--bg),#ffffff);color:#222;an
 .wrap{max-width:980px;margin:36px auto;padding:28px}
 .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:26px}
 .brand{display:flex;gap:16px;align-items:center}
-.logo{width:84px;height:84px;border-radius:14px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:flex;align-items:center;justify-content:center;flex-shrink:0}
-.logo img{width:56px;height:56px;display:block;}
+.logo{
+  width:84px;
+  height:84px;
+  border-radius:14px;
+  background:linear-gradient(135deg,var(--accent),var(--accent-2));
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-shrink:0;
+  overflow:hidden;
+}
+.logo img{
+  width:80px;
+  height:80px;
+  object-fit:cover;
+  border-radius:50%;
+}
 h2{margin:6px 0 0;font-size:20px}
 p.lead{color:var(--muted);margin-top:12px}
 .grid{display:grid;grid-template-columns:1fr 360px;gap:20px;margin-top:22px}
@@ -31,11 +46,11 @@ p.lead{color:var(--muted);margin-top:12px}
 .box{position:relative;display:flex;flex-direction:column;align-items:center;justify-content:center;background:linear-gradient(180deg,#fffaf6,#fff0f5);border-radius:12px;padding:20px;overflow:hidden}
 .box canvas{border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.05);transition: transform 0.5s ease;}
 .box:hover canvas{transform: scale(1.05) rotate(-2deg);}
+.box:hover .sparkle{animation-duration:0.7s !important;}
 .meta{background:linear-gradient(180deg,#fff,#f8fffe);border-radius:12px;padding:18px;border:1px solid rgba(0,0,0,0.03)}
 .price{font-size:26px;font-weight:600;margin:6px 0}
 .features{margin-top:12px;color:var(--muted);font-size:14px}
-.btn{display:inline-block;padding:12px 18px;border-radius:12px;background:linear-gradient(90deg,#ffd1e6,#cfeeff);color:#2a1630;font-weight:700;text-decoration:none;border:none;cursor:pointer;transition:transform 0.2s ease;}
-.btn:hover{transform:translateY(-2px);}
+.btn{display:inline-block;padding:12px 18px;border-radius:12px;background:linear-gradient(90deg,#ffd1e6,#cfeeff);color:#2a1630;font-weight:700;text-decoration:none;border:none;cursor:pointer}
 .btn.secondary{background:transparent;border:1px solid rgba(0,0,0,0.06);padding:10px 14px}
 .small{font-size:13px;color:var(--muted);margin-top:10px}
 footer{margin-top:18px;color:var(--muted);font-size:13px}
@@ -58,12 +73,11 @@ footer{margin-top:18px;color:var(--muted);font-size:13px}
 </style>
 </head>
 <body>
-
 <div class="wrap">
   <div class="card">
     <div class="brand">
       <div class="logo" aria-hidden="true">
-        <img src="https://cdn.jsdelivr.net/gh/tabler/tabler-icons/icons/ball-of-yarn.svg" alt="Cozy Loop Logo">
+        <img src="ChatGPT Image Oct 14, 2025, 03_17_23 PM.png" alt="Cozy Loop Logo">
       </div>
       <div>
         <h2>Cozy Crochet Bundle — Beanie + Scarf + Little Pouch</h2>
@@ -82,7 +96,7 @@ footer{margin-top:18px;color:var(--muted);font-size:13px}
         <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap;align-items:center">
           <button class="btn" id="buy-download">Buy & Download — $8</button>
           <button class="btn secondary" id="unlock-download">I’ve Paid — Unlock Download</button>
-          <button class="btn" id="preview-pattern">Preview Pattern (PDF)</button>
+          <button class="btn secondary" id="download-sample">Download Free Sample (Beanie)</button>
         </div>
 
         <p class="small">Clicking <strong>Buy & Download</strong> opens PayPal. Once payment is completed, click <strong>I’ve Paid — Unlock Download</strong> to get the full ZIP bundle.</p>
@@ -126,11 +140,12 @@ footer{margin-top:18px;color:var(--muted);font-size:13px}
 
 <script>
 const PAYPAL_LINK='https://www.paypal.com/paypalme/dailyblissplanners';
-const ZIP_LINK='cozy_loop_bundle.zip';
+const ZIP_LINK='https://cer27awesome-art.github.io/Cozy-Loop-Studio/cozy_loop_bundle.zip';
+const SAMPLE_LINK='https://cer27awesome-art.github.io/Cozy-Loop-Studio/Cozy-Beanie-Sample.pdf';
 
 document.getElementById('year').textContent=new Date().getFullYear();
 
-// Thumbnail preview
+// Thumbnails
 function renderThumbs(){
   const thumbs=document.getElementById('thumbs'); thumbs.innerHTML='';
   ['Beanie','Scarf','Pouch'].forEach((text,i)=>{
@@ -168,24 +183,21 @@ window.onload=()=>{
   createPreviewCanvas();
 };
 
+// Buttons
 const unlockBtn=document.getElementById('unlock-download');
 document.getElementById('buy-download').addEventListener('click',()=>{
   unlockBtn.disabled=false;
   window.open(PAYPAL_LINK,'_blank');
 });
-
 unlockBtn.addEventListener('click',()=>{
-  unlockBtn.disabled=true; 
-  unlockBtn.textContent='Preparing your files...';
-  const thankYou=document.getElementById('thank-you'); 
-  thankYou.style.display='block';
-  setTimeout(()=>{
-    window.location.href = ZIP_LINK;
-    unlockBtn.style.display='none'; // ✅ hides the unlock button after download starts
-  }, 800);
+  unlockBtn.disabled=true; unlockBtn.textContent='Preparing your files...';
+  const thankYou=document.getElementById('thank-you'); thankYou.style.display='block';
   document.getElementById('download-now').onclick=()=>window.location.href=ZIP_LINK;
+  unlockBtn.textContent='Downloaded ✓';
+});
+document.getElementById('download-sample').addEventListener('click',()=>{
+  window.location.href=SAMPLE_LINK;
 });
 </script>
 </body>
 </html>
-
