--- a/index.html
+++ b/index.html
@@ -4,134 +4,185 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Cozy Loop Studio — Cozy Crochet Bundle</title>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
-  body {
-    font-family: 'Montserrat', sans-serif;
-    margin:0;
-    padding:0;
-    background:#fff8f0;
-    color:#333;
-  }
-  header {
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    padding:15px 30px;
-    background:#fff;
-    box-shadow:0 2px 5px rgba(0,0,0,0.1);
-  }
-  header img {
-    height:60px;
-  }
-  nav a {
-    margin-left:20px;
-    text-decoration:none;
-    color:#333;
-    font-weight:700;
-  }
-  nav a:hover {
-    color:#ff7f50;
-  }
-  .hero {
-    text-align:center;
-    padding:60px 20px;
-    background:#fff0e5;
-  }
-  .hero h1 {
-    font-size:3rem;
-    margin-bottom:20px;
-    color:#ff7f50;
-  }
-  .hero p {
-    font-size:1.2rem;
-    margin-bottom:30px;
-  }
-  .hero a {
-    text-decoration:none;
-    padding:12px 25px;
-    background:#ff7f50;
-    color:#fff;
-    font-weight:bold;
-    border-radius:10px;
-  }
-  section {
-    padding:50px 20px;
-    max-width:1000px;
-    margin:0 auto;
-  }
-  h2 {
-    color:#ff7f50;
-    margin-bottom:20px;
-  }
-  .bundle img {
-    width:100%;
-    max-width:300px;
-    border-radius:15px;
-    box-shadow:0 4px 10px rgba(0,0,0,0.1);
-  }
-  .bundle-item {
-    display:inline-block;
-    margin:20px;
-    vertical-align:top;
-    text-align:center;
-  }
-  footer {
-    text-align:center;
-    padding:30px 20px;
-    background:#fff;
-    margin-top:50px;
-    box-shadow:0 -2px 5px rgba(0,0,0,0.05);
-  }
+:root{
+  --bg:#fffaf6;
+  --card:#ffffff;
+  --accent:#ffe7f0;
+  --accent-2:#e6fbff;
+  --muted:#6c6c72;
+  --radius:16px;
+  --shadow:0 8px 30px rgba(47,38,63,0.06);
+  font-family:'Poppins',system-ui,-apple-system,'Segoe UI',Roboto,Arial;
+}
+*{box-sizing:border-box}
+body{margin:0;background:linear-gradient(180deg,var(--bg),#ffffff);color:#222;animation:fadeIn 0.7s ease-out;}
+@keyframes fadeIn {from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
+.wrap{max-width:980px;margin:36px auto;padding:28px}
+.card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:26px}
+.brand{display:flex;gap:16px;align-items:center}
+.logo{width:84px;height:84px;border-radius:14px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:flex;align-items:center;justify-content:center;flex-shrink:0}
+.logo img{width:56px;height:56px;display:block;}
+h2{margin:6px 0 0;font-size:20px}
+p.lead{color:var(--muted);margin-top:12px}
+.grid{display:grid;grid-template-columns:1fr 360px;gap:20px;margin-top:22px}
+.preview{background:linear-gradient(180deg,#fff,#fffaf5);border-radius:12px;padding:16px;border:1px solid rgba(0,0,0,0.03)}
+.box{position:relative;display:flex;flex-direction:column;align-items:center;justify-content:center;background:linear-gradient(180deg,#fffaf6,#fff0f5);border-radius:12px;padding:20px;overflow:hidden}
+.box canvas{border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.05);transition: transform 0.5s ease;}
+.box:hover canvas{transform: scale(1.05) rotate(-2deg);}
+.box:hover .sparkle{animation-duration:0.7s !important;}
+.meta{background:linear-gradient(180deg,#fff,#f8fffe);border-radius:12px;padding:18px;border:1px solid rgba(0,0,0,0.03)}
+.price{font-size:26px;font-weight:600;margin:6px 0}
+.features{margin-top:12px;color:var(--muted);font-size:14px}
+.btn{display:inline-block;padding:12px 18px;border-radius:12px;background:linear-gradient(90deg,#ffd1e6,#cfeeff);color:#2a1630;font-weight:700;text-decoration:none;border:none;cursor:pointer}
+.btn.secondary{background:transparent;border:1px solid rgba(0,0,0,0.06);padding:10px 14px}
+.small{font-size:13px;color:var(--muted);margin-top:10px}
+footer{margin-top:18px;color:var(--muted);font-size:13px}
+.thumbs{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
+.thumb{width:120px;border-radius:10px;padding:8px;background:#fff;border:1px dashed rgba(0,0,0,0.04);text-align:center}
+.thumb img{max-width:100%;border-radius:8px}
+.note{font-size:12px;color:var(--muted);margin-top:10px}
+#thank-you{display:none;text-align:center;padding:40px;background:linear-gradient(180deg,#fff0f5,#fffaf6);border-radius:16px;margin-top:20px;box-shadow:0 8px 30px rgba(47,38,63,0.06);}
+.sparkle-container{position:absolute;width:100%;height:100%;overflow:hidden;pointer-events:none;}
+.sparkle{position:absolute;width:6px;height:6px;background:radial-gradient(circle,#ffccff 0%,#ffffff00 70%);border-radius:50%;animation: sparkle-animation 2s infinite ease-in-out;opacity:0;}
+@keyframes sparkle-animation {
+0% {transform:translate(0,0) scale(1);opacity:0;}
+50% {transform:translate(20px,-20px) scale(1.5);opacity:1;}
+100% {transform:translate(0,0) scale(1);opacity:0;}
+}
+@media (max-width:880px){
+.grid{grid-template-columns:1fr;}
+.meta{order:-1}
+}
 </style>
 </head>
 <body>
+<div class="wrap">
+  <div class="card">
+    <div class="brand">
+      <div class="logo" aria-hidden="true">
+        <img src="https://cdn.jsdelivr.net/gh/tabler/tabler-icons/icons/ball-of-yarn.svg" alt="Cozy Loop Logo">
+      </div>
+      <div>
+        <h2>Cozy Crochet Bundle — Beanie + Scarf + Little Pouch</h2>
+        <p class="lead">Three beginner-friendly crochet patterns with stitch charts, printable cover art, and 3 coordinating phone wallpapers. Instant download after payment.</p>
+      </div>
+    </div>
 
-<header>
-  <img src="logo.png" alt="Cozy Loop Studio">
-  <nav>
-    <a href="#bundle">Bundle</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
+    <div class="grid">
+      <div>
+        <div class="preview">
+          <div class="box" id="preview-area">
+            <div class="sparkle-container"></div>
+          </div>
+        </div>
 
-<section class="hero">
-  <h1>Cozy Crochet Bundle</h1>
-  <p>Handmade patterns for hats, scarves, and pouches – perfect for adding a touch of cozy magic to your day! 🧶✨</p>
-  <a href="#bundle">Get the Bundle</a>
-</section>
+        <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap;align-items:center">
+          <button class="btn" id="buy-download">Buy & Download — $8</button>
+          <button class="btn secondary" id="unlock-download">I’ve Paid — Unlock Download</button>
+          <button class="btn secondary" id="download-sample">Download Free Sample (Beanie)</button>
+        </div>
 
-<section id="bundle">
-  <h2>What’s Included</h2>
-  <div class="bundle-item">
-    <img src="hat.png" alt="Cozy Beanie">
-    <h3>Cozy Beanie</h3>
+        <p class="small">Clicking <strong>Buy & Download</strong> opens PayPal. Once payment is completed, click <strong>I’ve Paid — Unlock Download</strong> to get the full ZIP bundle.</p>
+
+        <div id="thank-you">
+          <h2 style="font-family:'Pacifico',cursive;color:#5b3750;">Thank You! 🧶✨</h2>
+          <p style="color:#6c6c72;margin-top:12px;font-size:16px;">Your Cozy Crochet Bundle is ready to download! We hope you enjoy your patterns.</p>
+          <button id="download-now" style="margin-top:16px;padding:12px 20px;border-radius:12px;background:linear-gradient(90deg,#ffd1e6,#cfeeff);border:none;color:#2a1630;font-weight:700;cursor:pointer;">Download ZIP</button>
+          <p class="note">Keep this page open until your download starts.</p>
+        </div>
+      </div>
+
+      <aside class="meta">
+        <p class="price">$8 — Digital Pattern Pack</p>
+        <div class="features">
+          <ul>
+            <li>3 full patterns (PDF) — Cozy Beanie, Cozy Scarf, Little Pouch</li>
+            <li>Printable stitch charts (PNG) and product thumbnails</li>
+            <li>3 phone wallpapers (1080×1920)</li>
+            <li>Printable cover/marketing image (PNG)</li>
+          </ul>
+        </div>
+        <div style="margin-top:12px">
+          <strong>File formats</strong>
+          <p style="margin:6px 0 0;color:#6c6c72;font-size:13px">PDF (patterns), PNG (charts & wallpapers), ZIP (all files)</p>
+        </div>
+        <div style="margin-top:12px">
+          <strong>Support</strong>
+          <p style="margin:6px 0 0;color:#6c6c72;font-size:13px">Questions? Email <em>hello@cozyloop.example</em></p>
+        </div>
+      </aside>
+    </div>
+
+    <div class="thumbs" id="thumbs"></div>
+
+    <footer>
+      <p>Made with yarn & ✨ by Cozy Loop Studio • <span id="year"></span></p>
+    </footer>
   </div>
-  <div class="bundle-item">
-    <img src="scarf.png" alt="Warm Scarf">
-    <h3>Warm Scarf</h3>
-  </div>
-  <div class="bundle-item">
-    <img src="pouch.png" alt="Handmade Pouch">
-    <h3>Handmade Pouch</h3>
-  </div>
-  <p><a href="cozy_loop_bundle.zip" style="text-decoration:none; padding:12px 25px; background:#ff7f50; color:#fff; font-weight:bold; border-radius:10px;">Download Bundle</a></p>
-</section>
+</div>
 
-<section id="about">
-  <h2>About Cozy Loop Studio</h2>
-  <p>We are passionate about creating cozy crochet patterns for everyone! Each design is handmade with love and attention to detail, perfect for gifting or keeping all to yourself.</p>
-</section>
+<script>
+const PAYPAL_LINK='https://www.paypal.com/paypalme/dailyblissplanners';
+const ZIP_LINK='https://cer27awesome-art.github.io/Cozy-Loop-Studio/cozy_loop_bundle.zip';
+const SAMPLE_LINK='https://cer27awesome-art.github.io/Cozy-Loop-Studio/Cozy-Beanie-Sample.pdf';
 
-<section id="contact">
-  <h2>Contact</h2>
-  <p>Have questions or want to say hi? Email us at <a href="mailto:info@cozyloopstudio.com">info@cozyloopstudio.com</a></p>
-</section>
+document.getElementById('year').textContent=new Date().getFullYear();
 
-<footer>
-  &copy; 2025 Cozy Loop Studio
-</footer>
+// Thumbnails
+function renderThumbs(){
+  const thumbs=document.getElementById('thumbs'); thumbs.innerHTML='';
+  ['Beanie','Scarf','Pouch'].forEach((text,i)=>{
+    const canvas=document.createElement('canvas'); canvas.width=120; canvas.height=80;
+    const ctx=canvas.getContext('2d'); ctx.fillStyle=['#fff6f7','#fffaf0','#f6f0ff'][i]; ctx.fillRect(0,0,canvas.width,canvas.height);
+    ctx.fillStyle='#4b2f3f'; ctx.font='16px serif'; ctx.fillText(text+' 🧶',10,40);
+    const wrapper=document.createElement('div'); wrapper.className='thumb'; wrapper.appendChild(canvas);
+    thumbs.appendChild(wrapper);
+  });
+}
+renderThumbs();
 
+// Preview Canvas
+function createPreviewCanvas(){
+  const previewBox=document.getElementById('preview-area');
+  const canvas=document.createElement('canvas'); canvas.width=360; canvas.height=200;
+  const ctx=canvas.getContext('2d');
+  const grad=ctx.createLinearGradient(0,0,0,200); grad.addColorStop(0,'#FFE7F0'); grad.addColorStop(1,'#FFF0F5');
+  ctx.fillStyle=grad; ctx.fillRect(0,0,360,200);
+  ctx.fillStyle='#5b3750'; ctx.font='bold 20px Pacifico, cursive'; ctx.fillText('Cozy Crochet Bundle',20,100);
+  previewBox.appendChild(canvas);
+}
+function createSparkles(){
+  const container=document.querySelector('.sparkle-container');
+  for(let i=0;i<25;i++){
+    const s=document.createElement('div'); s.className='sparkle';
+    s.style.top=Math.random()*100+'%'; s.style.left=Math.random()*100+'%';
+    s.style.animationDuration=(Math.random()*1+1)+'s';
+    s.style.animationDelay=(Math.random()*2)+'s';
+    container.appendChild(s);
+  }
+}
+window.onload=()=>{
+  createSparkles();
+  createPreviewCanvas();
+};
+
+// Buttons
+const unlockBtn=document.getElementById('unlock-download');
+document.getElementById('buy-download').addEventListener('click',()=>{
+  unlockBtn.disabled=false;
+  window.open(PAYPAL_LINK,'_blank');
+});
+unlockBtn.addEventListener('click',()=>{
+  unlockBtn.disabled=true; unlockBtn.textContent='Preparing your files...';
+  const thankYou=document.getElementById('thank-you'); thankYou.style.display='block';
+  document.getElementById('download-now').onclick=()=>window.location.href=ZIP_LINK;
+  unlockBtn.textContent='Downloaded ✓';
+});
+document.getElementById('download-sample').addEventListener('click',()=>{
+  window.location.href=SAMPLE_LINK;
+});
+</script>
 </body>
 </html>
