--- a/index.html
+++ b/index.html
@@ -22,8 +22,23 @@ body{margin:0;background:linear-gradient(180deg,var(--bg),#ffffff);color:#222;an
 .wrap{max-width:980px;margin:36px auto;padding:28px}
 .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:26px}
 .brand{display:flex;gap:16px;align-items:center}
-.logo{width:84px;height:84px;border-radius:14px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:flex;align-items:center;justify-content:center;flex-shrink:0}
-.logo img{width:56px;height:56px;display:block;}
+.logo{
+  width:84px;
+  height:84px;
+  border-radius:14px;
+  background:linear-gradient(135deg,var(--accent),var(--accent-2));
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-shrink:0;
+  overflow:hidden;
+}
+.logo img{
+  width:80px;
+  height:80px;
+  object-fit:cover;
+  border-radius:50%;
+}
 h2{margin:6px 0 0;font-size:20px}
 p.lead{color:var(--muted);margin-top:12px}
 .grid{display:grid;grid-template-columns:1fr 360px;gap:20px;margin-top:22px}
@@ -62,7 +77,7 @@ footer{margin-top:18px;color:var(--muted);font-size:13px}
   <div class="card">
     <div class="brand">
       <div class="logo" aria-hidden="true">
-        <img src="https://cdn.jsdelivr.net/gh/tabler/tabler-icons/icons/ball-of-yarn.svg" alt="Cozy Loop Logo">
+        <img src="ChatGPT Image Oct 14, 2025, 03_17_23 PM.png" alt="Cozy Loop Logo">
       </div>
       <div>
         <h2>Cozy Crochet Bundle — Beanie + Scarf + Little Pouch</h2>
