--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ footer{margin-top:18px;color:var(--muted);font-size:13px}
         </div>
         <div style="margin-top:12px">
           <strong>Support</strong>
-          <p style="margin:6px 0 0;color:#6c6c72;font-size:13px">Questions? Email <em>hello@cozyloop.example</em></p>
+          <p style="margin:6px 0 0;color:#6c6c72;font-size:13px">Questions? Email <em>cozyloopstodios@gmail.com</em></p>
         </div>
       </aside>
     </div>
